--- a/05 HTML, CSS, JS 실습/02 form/index.html
+++ b/05 HTML, CSS, JS 실습/02 form/index.html
@@ -40,7 +40,7 @@
       <input type="checkbox" name="lectures" id="css" value="css">
       <label for="css">css</label>
     </div>
-    <textarea name="message" id="textarea" placeholder="하고 싶은 말을 써주세요:>"></textarea>
+    <textarea name="message" id="textarea" placeholder="하고 싶은 말을 써주세요:>" cols="100" rows="10"></textarea>
     <input type="submit" value="제출">
   </form>
 </body>
