간단한 쇼핑몰

--- a/06 practice/06/index.html
+++ b/06 practice/06/index.html
@@ -19,7 +19,7 @@
   <h1 class="text-center my-5">노래 리스트 생성 - 반복문 실습</h1>
   <div class="container">
     <h2 class="text-center mb-3">🎵 최신 노래 리스트</h2>
-    <ol class="list-group list-group-numbered list-group-flush mb-4 latest-songs-list"></ㅐ>
+    <ol class="list-group list-group-numbered list-group-flush mb-4 latest-songs-list"></ol>
   </div>
   <div class="container">
     <h2 class="text-center mb-3">👩‍🎤 노래 정보 리스트</h2>
